# nanda-structural-gate-skill

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_NANDA_6M.md  CHANGELOG.md  COMMANDS.md  Cargo.toml  FIELD_CORE_SOLE_ENGINE_PLAN.md  GOAL.md  LEXICAL_BIRTH_MECHANISM.md  LICENSE  LLMWAVE_BIG_ENGINEERING_RULES.md  LLMWAVE_BIG_ROADMAP.md  LLMWAVE_BROAD_EVAL_ROADMAP.md  LLMWAVE_CONTRACT.md  LLMWAVE_CORE_V1_CONTRACT.md  LLMWAVE_CORE_V1_EXECUTION_PLAN.md  LLMWAVE_CORE_V1_PHASE10_REPORT.md  LLMWAVE_CORE_V1_PHASE11_REPORT.md  LLMWAVE_CORE_V1_PHASE12_REPORT.md  LLMWAVE_CORE_V1_PHASE1_REPORT.md  LLMWAVE_CORE_V1_PHASE2_REPORT.md  LLMWAVE_CORE_V1_PHASE3_REPORT.md  LLMWAVE_CORE_V1_PHASE4_REPORT.md  LLMWAVE_CORE_V1_PHASE5_REPORT.md  LLMWAVE_CORE_V1_PHASE6_REPORT.md  LLMWAVE_CORE_V1_PHASE7_REPORT.md  LLMWAVE_CORE_V1_PHASE8_REPORT.md  LLMWAVE_CORE_V1_PHASE9_REPORT.md  LLMWAVE_CORE_V2_REPORT.md  LLMWAVE_CORE_V3_REPORT.md  LLMWAVE_PERSISTENT_WAVE_MEMORY_MECHANISM.md  PATTERN16_FIELD_INTEGRATION_PLAN.md  PLAN.md  README.md  RESEARCH_DIRECTION.md  RESEARCH_NOTES.md  UNIFIED_FIELD_REFACTOR_PLAN.md
examples/: contract-gate.protocol-pass.json  contract-gate.protocol-watch.json  decode-corpus.json  demo-corpus.json  demo-task.raw.txt  eval-corpus.json  linux-center-learning.script  linux-chat-core.profile.json  llmwave-big-adversarial-density-corpus.json  llmwave-big-ask-eval.json  llmwave-big-broad-public-corpus-100k.manifest.json  llmwave-big-broad-public-corpus.txt  llmwave-big-broad-public-manifest.json  llmwave-big-contract-density-corpus.json  llmwave-big-nonlinear-memory-corpus.json  (+56 more)
(+250 files in other folders)
