[package]
name = "nanda-structural-gate"
version = "1.2.0"
edition = "2021"
license = "MIT"
description = "Sparse-triad structural gate for agent relation checks"
readme = "README.md"
repository = "https://github.com/radislabus-star/nanda-structural-gate-skill"
homepage = "https://github.com/radislabus-star/nanda-structural-gate-skill"
keywords = ["agent", "structural", "retrieval", "vsa", "codex"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "nanda"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
